# DesignCode

./: .gitignore  LICENSE  NOTICE  README.ja.md  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
app/server/: art-assets.js  bridge-cli.js  design-sessions.js  gemini-acp-runner.mjs  index.js  llm.js  storage-layout.js
app/shared/: catalog.js  prompt-engine.js
notes/: CHANGELOG-next.md  v1.1.0.md  v1.1.1.md  v1.1.10.md  v1.1.2.md  v1.1.3.md  v1.1.4.md  v1.1.5.md  v1.1.6.md  v1.1.7.md  v1.1.8.md  v1.1.9.md  v1.2.0.md  v1.2.1.md  v1.2.2.md
scripts/: ci-compose-latest-json.mjs  ci-prune-r2.mjs  ci-purge-cf.mjs  ci-upload-r2.mjs  ensure-runtime-clis.mjs  fix-bundle-signatures.mjs  package-and-notarize.mjs  package-windows-updater.mjs  prepare-desktop-runtime.mjs  qa-workbench.mjs  release.mjs
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: runtime-entitlements.plist
src-tauri/src/: claude.rs  codex.rs  gemini.rs  main.rs  menu.rs  opencode.rs  runtime_lifecycle.rs  types.rs  utils.rs
src/components/: ComposerPanel.vue  ToolRail.vue  TopBar.vue  WorkbenchContainer.vue
src/composables/: useAppUpdate.js  useArtAssets.js  useCanvasViewport.js  useCliStream.js  useConfirmDialog.js  useConversation.js  useDesignExport.js  useDesignSession.js  useGuidedSetup.js  useRuntimeAgent.js  useSetupConfig.js  useTabs.js  useViewportScale.js  useWorkspaceState.js
(+25 files in other folders)
