[package]
name = "designcode-desktop"
version = "1.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "=2.5.6", features = [] }

[dependencies]
reqwest = { version = "=0.12.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "=3.12.0"
tauri = { version = "=2.10.3", features = [] }
tauri-plugin-updater = "2"
time = "=0.3.36"
tokio = { version = "=1.44.1", features = ["time"] }

[features]
default = []
